--- a/styles/screen/videoStyle.css
+++ b/styles/screen/videoStyle.css
@@ -1,13 +1,12 @@
 @media screen and (min-device-width: 641px) {
   .library,
   .library-show {
-    margin: 50px 5px 0 20%;
+    margin: 50px 5px 100px 20%;
     min-width: 810px;
-    padding-bottom: 100px;
   }
 
   .library-show {
-    margin: 50px 5px 0 5px !important;
+    margin: 50px 5px 100px 5px !important;
   }
 
   .library > ul,
